2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/def.lang: added "complex" style
	for complex numbers.
	* gtksourceview/language-specs/python.lang: correctly highlight
	numbers, def:whatevernumber are broken.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (create_reg_all): include
	regex error into the error message.
	* gtksourceview/language-specs/c.lang,
	gtksourceview/language-specs/python.lang: highlight conversion
	specifiers and escaped sequences in strings.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c:
	commented UPDATE_PRIORITY and UPDATE_TIME_SLICE constants;
	made CHECK_* macros and made corresponding function names lowercase;
	Removed some XXX comments, changed some FIXME's.
	* gtksourceview/gtksourcelanguage-parser-1.c:
	(build_keyword_list): removed keyword number limit and added a TODO there;
	removed language_strconvescape; removed old commented out code;
	(_gtk_source_language_file_parse_version1): check lang file version in
	* gtksourceview/gtksourcelanguage-parser-2.c:
	(create_definition): added a TODO about big keyword lists;
	removed old commented out code.
	* gtksourceview/gtksourcestylescheme.c: replaced XXX with FIXME (more
	informative one).
	* gtksourceview/gtktextregion.c,
	 gtksourceview/gtktextregion.h: removed gtk_text_region_subtract_region,
	it's not needed anymore.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcelanguage-parser-1.c
	gtksourceview/gtksourcelanguage-parser-2.c
	gtksourceview/gtksourcelanguage.c
	gtksourceview/gtksourcelanguagesmanager.c
	gtksourceview/gtksourcestyle.c
	gtksourceview/gtksourcestylescheme.c: do if (ptr != NULL) and
	if (ptr == NULL) instead of if (ptr) and if (!ptr), to please
	maintainers who are afraid of using pointers in boolean contexts.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>
